// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PendingFeedItem renders failed post 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#ffffff",
        "borderRadius": 8,
        "elevation": 4,
        "flexDirection": "row",
        "marginHorizontal": 16,
        "marginVertical": 8,
        "shadowColor": "#000000",
        "shadowOffset": Object {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.3,
        "shadowRadius": 2,
      },
      Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "flex-start",
        "padding": 16,
      },
    ]
  }
  testID="PendingFeedItem"
>
  <Video
    controls={false}
    paused={true}
    resizeMode="cover"
    source={
      Object {
        "uri": "",
      }
    }
    style={
      Object {
        "height": 48,
        "width": 48,
      }
    }
  />
  <View
    style={
      Object {
        "flex": 1,
        "marginHorizontal": 7,
      }
    }
  >
    <View>
      <Text
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Object {
              "fontSize": 16,
              "lineHeight": 24,
            },
          ]
        }
      >
        Failed to upload video.
      </Text>
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        testID="RetryButton"
      >
        <Text
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Object {
                "color": "#52C5DC",
                "fontSize": 16,
                "fontWeight": "bold",
                "lineHeight": 24,
              },
            ]
          }
        >
          Try again.
        </Text>
      </View>
    </View>
  </View>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
    testID="CancelButton"
  >
    <SvgMock
      color="#B4B6BA"
    />
  </View>
</View>
`;

exports[`PendingFeedItem renders pending post 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#ffffff",
        "borderRadius": 8,
        "elevation": 4,
        "flexDirection": "row",
        "marginHorizontal": 16,
        "marginVertical": 8,
        "shadowColor": "#000000",
        "shadowOffset": Object {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.3,
        "shadowRadius": 2,
      },
      Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "flex-start",
        "padding": 16,
      },
    ]
  }
  testID="PendingFeedItem"
>
  <Video
    controls={false}
    paused={true}
    resizeMode="cover"
    source={
      Object {
        "uri": "",
      }
    }
    style={
      Object {
        "height": 48,
        "width": 48,
      }
    }
  />
  <View
    style={
      Object {
        "flex": 1,
        "marginHorizontal": 7,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#505256",
          },
          Object {
            "fontFamily": "SourceSansPro-Regular",
          },
          Object {
            "fontSize": 16,
            "lineHeight": 24,
          },
        ]
      }
    >
      Posting...
    </Text>
  </View>
  <ActivityIndicator
    animating={true}
    color="rgba(0, 0, 0, 1)"
    hidesWhenStopped={true}
    size="small"
  />
</View>
`;
